# philosophers_42

./: .gitignore  CMakeLists.txt  Makefile  init.c  main.c  message.c  philosophers.h  simulation.c  timer.c  utils.c
sandbox/: sandbox.c
